Recover compilable Lumiya app from original APK